sudah stabil tanpa parallelisme